<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_all">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@drawable/arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_choose_time"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <ImageView
            android:id="@+id/img_sleep_banner"
            android:layout_width="370dp"
            android:layout_height="320dp"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/background_breathing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />
        <TextView
            android:id="@+id/tv_choose_time_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginTop="@dimen/_34dp"
            android:text="@string/text_choose_time_des"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/img_sleep_banner" />
        <TextView
            android:id="@+id/btn_one_min"
            android:layout_width="@dimen/_76dp"
            android:layout_height="@dimen/_32dp"
            android:textColor="@color/color_button_choose_time_unselect"
            android:text="@string/text_one_min"
            android:textSize="16sp"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintRight_toLeftOf="@id/btn_two_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_time_des"
            android:layout_marginLeft="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center"
            android:background="@drawable/bg_btn_choose_time_unselect"/>

        <TextView
            android:id="@+id/btn_two_min"
            android:text="@string/text_two_min"
            android:layout_width="@dimen/_76dp"
            android:layout_height="@dimen/_32dp"
            app:layout_constraintLeft_toRightOf="@id/btn_one_min"
            app:layout_constraintRight_toLeftOf="@id/btn_three_min"
            app:layout_constraintTop_toTopOf="@id/btn_one_min"
            app:layout_constraintBottom_toBottomOf="@id/btn_one_min"
            android:textColor="@color/color_button_choose_time_unselect"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/bg_btn_choose_time_unselect"/>

        <TextView
            android:id="@+id/btn_three_min"
            android:layout_width="@dimen/_76dp"
            android:layout_height="@dimen/_32dp"
            android:text="@string/text_three_min"
            app:layout_constraintBottom_toBottomOf="@+id/btn_one_min"
            app:layout_constraintLeft_toRightOf="@id/btn_two_min"
            app:layout_constraintRight_toLeftOf="@id/btn_four_min"
            app:layout_constraintTop_toTopOf="@id/btn_one_min"
            android:textColor="@color/color_button_choose_time_unselect"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/bg_btn_choose_time_unselect"/>

        <TextView
            android:id="@+id/btn_four_min"
            android:text="@string/text_four_min"
            android:layout_width="@dimen/_76dp"
            android:layout_height="@dimen/_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/btn_two_min"
            app:layout_constraintTop_toTopOf="@id/btn_one_min"
            app:layout_constraintBottom_toBottomOf="@id/btn_one_min"
            android:layout_marginRight="@dimen/_16dp"
            android:textColor="@color/color_button_choose_time_unselect"
            android:textSize="16sp"
            android:gravity="center"
            android:background="@drawable/bg_btn_choose_time_unselect"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_height="@dimen/_42dp"
                android:layout_marginHorizontal="@dimen/_17dp"
                android:background="@drawable/bg_btn_next_breathing"
                android:gravity="center"
                android:text="@string/text_done"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>