<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dialog_breathing">

            <TextView
                android:id="@+id/dialog_breathing_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp"
                android:fontFamily="@font/semi_bold"
                android:text="@string/text_ops"
                android:textColor="@color/white"
                android:textSize="@dimen/dialog_breath_title_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_breathing_dialog"
                android:layout_width="314dp"
                android:layout_height="248dp"
                android:layout_marginTop="@dimen/_16dp"
                android:background="@drawable/img_dialiog_breathing"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_breathing_title" />

            <TextView
                android:id="@+id/dialog_breathing_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_ops_dialog_content"
                android:textColor="@color/white"
                android:textSize="@dimen/inhale_text_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_breathing_dialog" />

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/_132dp"
                android:layout_height="@dimen/_42dp"
                android:layout_marginTop="@dimen/_61dp"
                android:background="@drawable/bg_btn_cancel_dialog"
                android:gravity="center"
                android:text="@string/text_cancel"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/btn_yes"
                app:layout_constraintTop_toBottomOf="@id/dialog_breathing_content" />

            <TextView
                android:id="@+id/btn_yes"
                android:layout_width="@dimen/_132dp"
                android:layout_height="@dimen/_42dp"
                android:background="@drawable/bg_btn_next_breathing"
                android:gravity="center"
                android:text="@string/text_yes"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/btn_cancel"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_cancel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>