<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_all">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:layout_marginLeft="@dimen/_25dp"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@drawable/arrow_left"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_breathing"
            android:textColor="@color/white"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <ImageView
            android:id="@+id/img_sleep_banner"
            android:layout_width="370dp"
            android:layout_height="320dp"
            android:layout_marginTop="@dimen/_40dp"
            android:background="@drawable/background_breathing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_21dp"
            app:layout_constraintBottom_toTopOf="@id/ctl_bottom"
            app:layout_constraintTop_toBottomOf="@id/img_sleep_banner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_deep_breathing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:background="@drawable/bg_btn_breathing_checked"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ic_deepbreathing"
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_marginHorizontal="@dimen/_12dp"
                        android:layout_marginVertical="@dimen/_21dp"
                        android:background="@drawable/ic_btn_deepbreathing"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_deep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12dp"
                        android:text="@string/text_deep_breathing"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/ic_deepbreathing"
                        app:layout_constraintTop_toTopOf="@id/ic_deepbreathing" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12dp"
                        android:text="@string/text_deep_breathing_des"
                        android:textColor="@color/color_breathing_description"
                        app:layout_constraintLeft_toRightOf="@id/ic_deepbreathing"
                        app:layout_constraintTop_toBottomOf="@id/title_deep" />

                    <ImageView
                        android:id="@+id/ic_deep_checked"
                        android:layout_width="@dimen/_24dp"
                        android:layout_height="@dimen/_24dp"
                        android:layout_marginRight="@dimen/_14dp"
                        android:background="@drawable/ic_tick"
                        app:layout_constraintBottom_toBottomOf="@id/ic_deepbreathing"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ic_deepbreathing" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_calm_breathing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/bg_btn_breathing_unchecked"
                    app:layout_constraintTop_toBottomOf="@id/btn_deep_breathing">

                    <ImageView
                        android:id="@+id/ic_calmbreathing"
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_marginHorizontal="@dimen/_12dp"
                        android:layout_marginVertical="@dimen/_21dp"
                        android:background="@drawable/ic_btn_calmbreathing"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_calm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12dp"
                        android:text="@string/text_calm_breathing"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/ic_calmbreathing"
                        app:layout_constraintTop_toTopOf="@id/ic_calmbreathing" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12dp"
                        android:text="@string/text_calm_breathing_des"
                        android:textColor="@color/color_breathing_description"
                        app:layout_constraintLeft_toRightOf="@id/ic_calmbreathing"
                        app:layout_constraintTop_toBottomOf="@id/title_calm" />

                    <ImageView
                        android:id="@+id/ic_calm_checked"
                        android:layout_width="@dimen/_24dp"
                        android:layout_height="@dimen/_24dp"
                        android:layout_marginRight="@dimen/_14dp"
                        android:background="@drawable/ic_tick"
                        app:layout_constraintBottom_toBottomOf="@id/ic_calmbreathing"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ic_calmbreathing" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/btn_snoring"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:background="@drawable/bg_btn_breathing_unchecked"
                    app:layout_constraintTop_toBottomOf="@id/btn_calm_breathing">

                    <ImageView
                        android:id="@+id/ic_snoring"
                        android:layout_width="@dimen/_32dp"
                        android:layout_height="@dimen/_32dp"
                        android:layout_marginHorizontal="@dimen/_12dp"
                        android:layout_marginVertical="@dimen/_21dp"
                        android:background="@drawable/ic_btn_snore_reduce"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/title_snoring"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12dp"
                        android:text="@string/text_snoring_breathing"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/ic_snoring"
                        app:layout_constraintTop_toTopOf="@id/ic_snoring" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_12dp"
                        android:text="@string/text_snoring_breathing_des"
                        android:textColor="@color/color_breathing_description"
                        app:layout_constraintLeft_toRightOf="@id/ic_snoring"
                        app:layout_constraintTop_toBottomOf="@id/title_snoring" />

                    <ImageView
                        android:id="@+id/ic_snore_checked"
                        android:layout_width="@dimen/_24dp"
                        android:layout_height="@dimen/_24dp"
                        android:layout_marginRight="@dimen/_14dp"
                        android:background="@drawable/ic_tick"
                        app:layout_constraintBottom_toBottomOf="@id/ic_snoring"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ic_snoring" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="@dimen/_42dp"
                android:layout_marginHorizontal="@dimen/_17dp"
                android:background="@drawable/bg_btn_next_breathing"
                android:gravity="center"
                android:text="@string/text_next"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>